--- a/spring/bunk-springfirstapp/firstSpringApp/src/main/resources/application.properties
+++ b/spring/bunk-springfirstapp/firstSpringApp/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/conference_demo
+spring.datasource.username=mafideju
+spring.datasource.password=@Brigo83
