--- a/maven101/maven101/pom.xml
+++ b/maven101/maven101/pom.xml
@@ -34,6 +34,12 @@
 	  <version>3.1.0</version>
 	</dependency>
 	
+	<dependency>
+	  <groupId>org.hibernate</groupId>
+	  <artifactId>hibernate-core</artifactId>
+	  <version>5.6.5.Final</version>
+	</dependency>
+	
   </dependencies>
 
   <build>
